<resources>
    <string name="app_name">LassDieWuerfelRollen</string>
    <string name="strFirstDie">First Die</string>
    <string name="strSecondDie">Second Die</string>
    <string name="strThirdDie">Third Die</string>
    <string name="strFourthDie">Forth Die</string>
    <string name="strFifthDie">Fifth Die</string>
    <string name="strSixthDie">Sixth Die</string>
    <string name="strRollDice">Roll dice</string>
    <string name="strRollTheDiceToStart">Roll the dice to start</string>
    <string name="strFiveOfAkind">Five of a kind</string>
    <string name="strFourOfAkind">Four of a kind</string>
    <string name="strFullHouse">Full house</string>
    <string name="strStraight">Straight</string>
    <string name="strThreeOfAKind">Three of a kind</string>
    <string name="strTwoPairs">Two Pairs</string>
    <string name="strApair">A Pair</string>
    <string name="strNothingSpecial">Nothing Special</string>
    <string name="strFormatPossibleRollResults">The following roll results are possible: %s %s %s %s %s %s %s %s</string>
    <string name="strStartRolling">Start rolling</string>
    <string name="strShareData">Share data</string>
    <string name="strLoremIpsum" translatable="false">Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
        sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
        ed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
        At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
        no sea takimata sanctus est Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet,
        consetetur sadipscing elitr,sed diam nonumy eirmod tempor invidunt ut labore et dolore
        magna aliquyam erat, ed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
        tempor invidunt ut labore et dolore magna aliquyam erat, sed diFam voluptua.
        At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
        no sea takimata sanctus est Lorem ipsum dolor sit amet.
    </string>
    <string name="strAbout">About</string>
    <string name="strHeadLine">Welcome :D</string>
    <string name="strHelp">Help</string>
    <string name="strOpenTheNavigationDrawer">Open navigation drawer</string>
    <string name="strCloseNavigationDrawer">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="strHome">Home</string>
    <string name="strPossibleRollResults">Possible roll results</string>
    <string name="strHelpActivityHomeFragmentHowToNavigate">
        Please click the burger menu icon in the top
        left corner to open up the navigation drawer menu. If you want to see who made this app
        klick the info icon in the top right corner.
    </string>
    <string name="strAboutUs">About us</string>

</resources>