<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiceActivity"
    android:orientation="vertical">


    <TextView
        android:text="@string/strRollTheDiceToStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtvRollResult"
        android:textSize="36sp"
        android:textColor="@android:color/black"
        android:textAlignment="center"/>

    <Button
        android:text="@string/strRollDice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRollDice"
        android:textAllCaps="false"
        android:textSize="36sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linLayoutDice">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/one_pip"
            android:id="@+id/imgvFirstDie"
            android:layout_weight="1"
            android:contentDescription="@string/strFirstDie"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/two_pips"
            android:id="@+id/imgvSecondDie"
            android:layout_weight="1"
            android:contentDescription="@string/strSecondDie"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/three_pips"
            android:id="@+id/imgvThirdDie"
            android:layout_weight="1"
            android:contentDescription="@string/strThirdDie"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/four_pips"
            android:id="@+id/imgvFourthDie"
            android:layout_weight="1"
            android:contentDescription="@string/strFourthDie"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/five_pips"
            android:id="@+id/imgvFifthDie"
            android:layout_weight="1"
            android:contentDescription="@string/strFifthDie"
            android:layout_marginStart="10dp"/>

    </LinearLayout>


</LinearLayout>